crates/talkbank-direct-parser/tests/snapshots/offset_tests__parser_equivalence_word_with_offset.snap
---
source: talkbank-direct-parser/tests/offset_tests.rs
expression: "(word_dp, word_tsp, are_semantically_equal)"
---
(
    Some(
        Word {
            span: Span {
                start: 100,
                end: 107,
            },
            word_id: None,
            raw_text: "hello@s",
            cleaned_text: "hello",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: Some(
                Shortcut,
            ),
            part_of_speech: None,
        },
    ),
    Some(
        Word {
            span: Span {
                start: 100,
                end: 107,
            },
            word_id: None,
            raw_text: "hello@s",
            cleaned_text: "hello",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "hello",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            untranscribed: None,
            lang: Some(
                Shortcut,
            ),
            part_of_speech: None,
        },
    ),
    true,
)
